@@ -37,7 +37,7 @@
 #define CS_PACKAGE_VERSION  "5.12"
 #define CS_VERSION          (5)
 #define CS_SUBVER           (12)
-#define CS_PATCHLEVEL       (50)
+#define CS_PATCHLEVEL       (51)
 
 #define CS_APIVERSION       2   /* should be increased anytime a new version
                                    contains changes that an older host will
