@@ -1,3 +1,7 @@
+2010-11-27  john ffitch  <jpff@codemist.co.uk>
+
+	* OOps/ugens3.c (adsyn): check that ktogo is never zero
+
 2010-11-16  John ff  <jpff@cs.bath.ac.uk>
 
 	* Top/main.c (csoundCompile): and call macro inits
